# TUIman

./: .gitignore  README.md  app.py  install.sh  log.txt  music.tcss  pyproject.toml
.github/workflows/: release.yml
modules/: bottom_box.py  top_box.py
src/themes/: __init__.py  themes.py
src/tuiman/: app.py  music.tcss  tuiman.tcss
src/tuiman/modules/: bottom_box.py  modals.py  top_box.py
src/tuiman/utils/: caching.py  library_manager.py  lyrics.py  player.py
utils/: caching.py  library_manager.py  lyrics.py  models.py  player.py  search.py
