[build-system]
requires = ["uv_build"]
backend-path = []
build-backend = "uv_build"

[project]
name = "tuiman"
version = "1.0.0"
description = "A TUI music player for your favourite local mp3 albums!"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "platformdirs>=4.9.6",
    "pygame-ce>=2.5.7",
    "rich-pixels>=3.0.1",
    "textual>=8.2.4",
    "textual-autocomplete>=4.0.6",
    "textual-dev>=1.8.0",
]

[project.scripts]
my-cli = "tuiman.app:main"
